# textual

./: .gitignore  Cargo.lockd  Cargo.toml  LICENSE  README.md  oldreadme.md  textual.conf  tool.html  ui.html
fastly/: Cargo.toml  fastly.toml
fastly-backend/: Cargo.toml
fastly-backend/common/: Cargo.toml
fastly-backend/common/src/: lib.rs
fastly-backend/src/: fontprovider.rs  main.rs
fastly/src/: color.rs  main.rs
server/: Cargo.toml  Dockerfile  dev.conf  guide.html
server/src/: config.rs  main.rs  text.rs
src/: color.rs  config.rs  fontprovider.rs  image.rs  main.rs  query.rs  statistics.rs  style.rs  template.htm  text.rs
textual/: Cargo.toml
