[package]
name = "textualimagery"
version = "0.1.0"
authors = ["Brad Alfirevic <brad@genbyte.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
small_http = { path = "../small_http" }
smol = "1.2.5"
thiserror = "1.0"

image = "0.23"
#fontster = { git = "https://github.com/gennyble/fontster", branch = "main" }
fontster = { path = "../fontster" }