[package]
name = "textualimagery"
version = "0.1.0"
authors = ["Brad Alfirevic <brad@genbyte.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
small_http = { path = "../small_http" }
smol = "1.2.5"
thiserror = "1.0"
confindent = "2.0.1"
getopts = "0.2"

tinytemplate = "1.2.1"
serde = { version = "1.0", features = ["derive"] }

ureq = "2"
serde_json = "1.0.64"

image = "0.23"
#fontster = { git = "https://github.com/gennyble/fontster", branch = "main" }
fontster = { path = "../fontster" }